# roscamp-repo-2

./: .gitignore  README.md  recorded_20250424_201449.avi
alba_gpt/: README.md  requirements.txt
alba_gpt/AlbaGPT_LLM/: Alba_LLM_templates.py  main.py
alba_gpt/AlbaGPT_LLM_ws/: Alba_LLM_templates.py  LLM_communication_test.ipynb  LangChain_GPT_test.ipynb  LangChain_gemma_test.ipynb  LangChain_llama_test.ipynb  main.py
alba_gpt/AlbaGPT_Vision/: 250501.py  250502.py  main.py  mediapipe.ipynb
alba_gpt/AlbaGPT_communication/: AlbaGPT_UDP.py  UDP_test.py
alba_gpt/AlbaGPT_main/: AlbaGPT_function.py  AlbaGPT_main.py  main.py
alba_planner/: README.md
alba_planner/alba_manager/: main.py  robot_status_publisher.py  ros2_interface.py  tcp_client.py
cook_gpt/: README.md
cook_gpt/cookgpt_service/: main.py  picam_to_udp_server_test.py
cook_planner/: README.md  udp_sender.py
cook_planner/cook_manager/: cookbot_udp.py  cooking_tasks.py  (+1 more)
docs/: api_endpoints.md  architecture.md  database_schema.md  error_codes.md  faq.md  fastapi_architecture.md  github_guide.md  interface_specification.md  network_communication.md  project_structure.md  system_requirements.md  websocket_architecture.md
install/: local_setup.sh  setup.sh
log/: latest_build
robodine_service/: README.md  data_example.md
src/: App.tsx  index.css  package.xml  setup.py
src/alba_manager/: package.xml  setup.py
src/alba_manager/alba_manager/: robot_status_publisher.py  ros2_interface.py  rtsp_server.py  tcp_client.py  test_ros2_publisher.py
src/alba_manager/resource/: alba_manager
(+2233 files in other folders)
