<?xml version="1.0"?>
<package format="3">
  <name>alba_manager</name>
  <version>0.1.0</version>
  <description>Alba Planner nodes and custom messages</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- THIS LINE IS REQUIRED ⇩ -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
</package>
